--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.1",
+    "formik": "^2.4.6",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
@@ -56,6 +57,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
+    "yup": "^1.6.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
