--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@tiptap/extension-code-block-lowlight": "^3.0.0-next.4",
+    "@tiptap/react": "^3.0.0-next.4",
+    "@tiptap/starter-kit": "^3.0.0-next.4",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -44,6 +47,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.1",
     "input-otp": "^1.4.1",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
@@ -61,6 +65,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
